cmake_minimum_required(VERSION 3.18)

set(APRS_IS_HOST                  "noam.aprs2.net")
set(APRS_IS_PORT                  14580)
set(APRS_IS_PASSCODE              19371)

set(APRS_KISS_TNC_TCP_HOST        "127.0.0.1")
set(APRS_KISS_TNC_TCP_PORT        8001)

set(APRS_KISS_TNC_SERIAL_DEVICE   "COM3")
set(APRS_KISS_TNC_SERIAL_SPEED    115200)

set(APRS_STATION                  "N0CALL")
set(APRS_STATION_PATH             "WIDE1-1")
set(APRS_STATION_BEACON           "0 * 60") # interval in seconds or 0 to disable
set(APRS_STATION_COMMENT          "Test")
set(APRS_STATION_SPEED            0)
set(APRS_STATION_COURSE           0)
set(APRS_STATION_ALTITUDE         600)
set(APRS_STATION_LATITUDE         0)
set(APRS_STATION_LONGITUDE        0)
set(APRS_STATION_SYMBOL_TABLE     '/')
set(APRS_STATION_SYMBOL_TABLE_KEY 'l')
set(APRS_STATION_POSITION_TYPE    APRSERVICE_POSITION_TYPE_POSITION)

set(DEMO_TICK_RATE                10)

function(target_set_aprs_definitions target)
	target_compile_definitions(${target} PRIVATE
		-DAPRS_IS_HOST="${APRS_IS_HOST}"
		-DAPRS_IS_PORT=${APRS_IS_PORT}
		-DAPRS_IS_PASSCODE=${APRS_IS_PASSCODE}

		-DAPRS_KISS_TNC_TCP_HOST="${APRS_KISS_TNC_TCP_HOST}"
		-DAPRS_KISS_TNC_TCP_PORT=${APRS_KISS_TNC_TCP_PORT}
		-DAPRS_KISS_TNC_SERIAL_DEVICE="${APRS_KISS_TNC_SERIAL_DEVICE}"
		-DAPRS_KISS_TNC_SERIAL_SPEED=${APRS_KISS_TNC_SERIAL_SPEED}

		-DAPRS_STATION="${APRS_STATION}"
		-DAPRS_STATION_PATH="${APRS_STATION_PATH}"
		-DAPRS_STATION_BEACON=${APRS_STATION_BEACON}
		-DAPRS_STATION_COMMENT="${APRS_STATION_COMMENT}"
		-DAPRS_STATION_SPEED=${APRS_STATION_SPEED}
		-DAPRS_STATION_COURSE=${APRS_STATION_COURSE}
		-DAPRS_STATION_ALTITUDE=${APRS_STATION_ALTITUDE}
		-DAPRS_STATION_LATITUDE=${APRS_STATION_LATITUDE}
		-DAPRS_STATION_LONGITUDE=${APRS_STATION_LONGITUDE}
		-DAPRS_STATION_SYMBOL_TABLE=${APRS_STATION_SYMBOL_TABLE}
		-DAPRS_STATION_SYMBOL_TABLE_KEY=${APRS_STATION_SYMBOL_TABLE_KEY}
		-DAPRS_STATION_POSITION_TYPE=${APRS_STATION_POSITION_TYPE}

		-DDEMO_TICK_RATE=${DEMO_TICK_RATE}
	)
endfunction()

project(demo)

add_subdirectory(APRService)

add_executable(demo demo.c)
target_link_libraries(demo APRService)
target_set_aprs_definitions(demo)
